<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/arrow_back_main_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/select_currency"
            app:layout_constraintBottom_toBottomOf="@id/select_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
        <TextView
            android:id="@+id/select_currency"
            style="@style/Widget.TipTime.TextViewSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_currency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <RadioGroup
            android:id="@+id/currency_options"
            style="@style/Widget.TipTime.CompoundButton.RadioButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/select_currency"
            app:layout_constraintTop_toBottomOf="@id/select_currency">

            <RadioButton
                android:id="@+id/dollar_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSettingsClicked"
                android:text="@string/dollars_currency" />

            <RadioButton
                android:id="@+id/euro_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonSettingsClicked"
                android:text="@string/euro_currency" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>